--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dependencies": {
         "@tailwindcss/vite": "^4.1.8",
         "react": "^19.1.0",
+        "react-confetti": "^6.4.0",
         "react-dom": "^19.1.0",
         "react-slot-counter": "^3.3.1",
         "tailwindcss": "^4.1.8"
